--- a/example/stylesheets/screen.css
+++ b/example/stylesheets/screen.css
@@ -3,10 +3,7 @@
   src: url("../fonts/OpenSans-Bold-webfont.eot");
   src: url("../fonts/OpenSans-Bold-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/OpenSans-Bold-webfont.woff") format("woff"), url("../fonts/OpenSans-Bold-webfont.ttf") format("truetype"), url("../fonts/OpenSans-Bold-webfont.svg#open_sansbold") format("svg");
   font-weight: normal;
-  font-style: normal;
-}
-
-/* line 19, ../../../../../../Library/Ruby/Gems/2.0.0/gems/guff-compass-1.0.1/lib/stylesheets/_guff.scss */
+  font-style: normal; }
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -25,221 +22,180 @@ time, mark, audio, video {
   border: 0;
   font-size: 100%;
   font: inherit;
-  vertical-align: baseline;
-}
+  vertical-align: baseline; }
 
-/* line 30, ../../../../../../Library/Ruby/Gems/2.0.0/gems/guff-compass-1.0.1/lib/stylesheets/_guff.scss */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, main, menu, nav, section {
-  display: block;
-}
+  display: block; }
 
-/* line 35, ../../../../../../Library/Ruby/Gems/2.0.0/gems/guff-compass-1.0.1/lib/stylesheets/_guff.scss */
 ol, ul {
-  list-style: none;
-}
+  list-style: none; }
 
-/* line 40, ../../../../../../Library/Ruby/Gems/2.0.0/gems/guff-compass-1.0.1/lib/stylesheets/_guff.scss */
 a {
-  text-decoration: none;
-}
+  text-decoration: none; }
 
-/* line 45, ../../../../../../Library/Ruby/Gems/2.0.0/gems/guff-compass-1.0.1/lib/stylesheets/_guff.scss */
 blockquote, q {
-  quotes: none;
-}
+  quotes: none; }
 
-/* line 51, ../../../../../../Library/Ruby/Gems/2.0.0/gems/guff-compass-1.0.1/lib/stylesheets/_guff.scss */
 blockquote:before, blockquote:after,
 q:before, q:after {
   content: '';
-  content: none;
-}
+  content: none; }
 
-/* line 57, ../../../../../../Library/Ruby/Gems/2.0.0/gems/guff-compass-1.0.1/lib/stylesheets/_guff.scss */
 table {
   border-collapse: collapse;
-  border-spacing: 0;
-}
+  border-spacing: 0; }
 
-/* line 63, ../../../../../../Library/Ruby/Gems/2.0.0/gems/guff-compass-1.0.1/lib/stylesheets/_guff.scss */
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
+  box-sizing: border-box; }
 
-/* line 497, ../../../../../../Library/Ruby/Gems/2.0.0/gems/guff-compass-1.0.1/lib/stylesheets/_guff.scss */
 body {
-  line-height: 1.5;
-}
+  line-height: 1.5; }
 
-/* line 503, ../../../../../../Library/Ruby/Gems/2.0.0/gems/guff-compass-1.0.1/lib/stylesheets/_guff.scss */
 h1 {
   font-size: 62px;
-  font-size: 3.875rem;
-}
+  font-size: 3.875rem; }
 
-/* line 507, ../../../../../../Library/Ruby/Gems/2.0.0/gems/guff-compass-1.0.1/lib/stylesheets/_guff.scss */
 h2 {
   font-size: 54px;
-  font-size: 3.375rem;
-}
+  font-size: 3.375rem; }
 
-/* line 511, ../../../../../../Library/Ruby/Gems/2.0.0/gems/guff-compass-1.0.1/lib/stylesheets/_guff.scss */
 h3 {
   font-size: 47px;
-  font-size: 2.9375rem;
-}
+  font-size: 2.9375rem; }
 
-/* line 515, ../../../../../../Library/Ruby/Gems/2.0.0/gems/guff-compass-1.0.1/lib/stylesheets/_guff.scss */
 h4 {
   font-size: 41px;
-  font-size: 2.5625rem;
-}
+  font-size: 2.5625rem; }
 
-/* line 519, ../../../../../../Library/Ruby/Gems/2.0.0/gems/guff-compass-1.0.1/lib/stylesheets/_guff.scss */
 h5 {
   font-size: 36px;
-  font-size: 2.25rem;
-}
+  font-size: 2.25rem; }
 
-/* line 523, ../../../../../../Library/Ruby/Gems/2.0.0/gems/guff-compass-1.0.1/lib/stylesheets/_guff.scss */
 h6 {
   font-size: 32px;
-  font-size: 2rem;
-}
+  font-size: 2rem; }
 
-/* line 527, ../../../../../../Library/Ruby/Gems/2.0.0/gems/guff-compass-1.0.1/lib/stylesheets/_guff.scss */
 p {
   font-size: 28px;
-  font-size: 1.75rem;
-}
+  font-size: 1.75rem; }
 
 @media (max-width: 767px) {
-  /* line 497, ../../../../../../Library/Ruby/Gems/2.0.0/gems/guff-compass-1.0.1/lib/stylesheets/_guff.scss */
   body {
-    line-height: 1.5;
-  }
+    line-height: 1.5; }
 
-  /* line 503, ../../../../../../Library/Ruby/Gems/2.0.0/gems/guff-compass-1.0.1/lib/stylesheets/_guff.scss */
   h1 {
     font-size: 40px;
-    font-size: 2.5rem;
-  }
+    font-size: 2.5rem; }
 
-  /* line 507, ../../../../../../Library/Ruby/Gems/2.0.0/gems/guff-compass-1.0.1/lib/stylesheets/_guff.scss */
   h2 {
     font-size: 35px;
-    font-size: 2.1875rem;
-  }
+    font-size: 2.1875rem; }
 
-  /* line 511, ../../../../../../Library/Ruby/Gems/2.0.0/gems/guff-compass-1.0.1/lib/stylesheets/_guff.scss */
   h3 {
     font-size: 31px;
-    font-size: 1.9375rem;
-  }
+    font-size: 1.9375rem; }
 
-  /* line 515, ../../../../../../Library/Ruby/Gems/2.0.0/gems/guff-compass-1.0.1/lib/stylesheets/_guff.scss */
   h4 {
     font-size: 27px;
-    font-size: 1.6875rem;
-  }
+    font-size: 1.6875rem; }
 
-  /* line 519, ../../../../../../Library/Ruby/Gems/2.0.0/gems/guff-compass-1.0.1/lib/stylesheets/_guff.scss */
   h5 {
     font-size: 24px;
-    font-size: 1.5rem;
-  }
+    font-size: 1.5rem; }
 
-  /* line 523, ../../../../../../Library/Ruby/Gems/2.0.0/gems/guff-compass-1.0.1/lib/stylesheets/_guff.scss */
   h6 {
     font-size: 21px;
-    font-size: 1.3125rem;
-  }
+    font-size: 1.3125rem; }
 
-  /* line 527, ../../../../../../Library/Ruby/Gems/2.0.0/gems/guff-compass-1.0.1/lib/stylesheets/_guff.scss */
   p {
     font-size: 18px;
-    font-size: 1.125rem;
-  }
-}
-/* line 46, ../sass/screen.scss */
+    font-size: 1.125rem; } }
+@media (max-width: 767px) and (orientation: landscape) {
+  body {
+    line-height: 1.5; }
+
+  h1 {
+    font-size: 22px;
+    font-size: 1.375rem; }
+
+  h2 {
+    font-size: 19px;
+    font-size: 1.1875rem; }
+
+  h3 {
+    font-size: 17px;
+    font-size: 1.0625rem; }
+
+  h4 {
+    font-size: 15px;
+    font-size: 0.9375rem; }
+
+  h5 {
+    font-size: 13px;
+    font-size: 0.8125rem; }
+
+  h6 {
+    font-size: 11px;
+    font-size: 0.6875rem; }
+
+  p {
+    font-size: 10px;
+    font-size: 0.625rem; }
+
+  iframe {
+    display: none; }
+
+  span.scroll-indicator {
+    font-size: 10px !important; } }
 html, body {
   height: 100%;
   overflow: hidden;
   -webkit-perspective: 200;
   -moz-perspective: 200;
   perspective: 200;
-  background: black;
-}
+  background: black; }
 
-/* line 55, ../sass/screen.scss */
 body {
-  font-family: 'open_sansbold',san-serif;
-}
+  font-family: 'open_sansbold',san-serif; }
 
-/* line 59, ../sass/screen.scss */
 main {
   display: block;
   height: 100%;
   -webkit-transform-style: preserve-3d;
   -moz-transform-style: preserve-3d;
-  transform-style: preserve-3d;
-}
+  transform-style: preserve-3d; }
 
 @-webkit-keyframes pulse {
-  /* line 68, ../sass/screen.scss */
   0% {
-    opacity: 1;
-  }
-
-  /* line 69, ../sass/screen.scss */
+    opacity: 1; }
   50% {
-    opacity: 0.25;
-  }
-
-  /* line 70, ../sass/screen.scss */
+    opacity: 0.25; }
   100% {
-    opacity: 1;
-  }
-}
-
+    opacity: 1; } }
 @-moz-keyframes pulse {
-  /* line 74, ../sass/screen.scss */
   0% {
-    opacity: 1;
-  }
-
-  /* line 75, ../sass/screen.scss */
+    opacity: 1; }
   50% {
-    opacity: 0.25;
-  }
-
-  /* line 76, ../sass/screen.scss */
+    opacity: 0.25; }
   100% {
-    opacity: 1;
-  }
-}
-
+    opacity: 1; } }
+@-o-keyframes pulse {
+  0% {
+    opacity: 1; }
+  50% {
+    opacity: 0.25; }
+  100% {
+    opacity: 1; } }
 @keyframes pulse {
-  /* line 80, ../sass/screen.scss */
   0% {
-    opacity: 1;
-  }
-
-  /* line 81, ../sass/screen.scss */
+    opacity: 1; }
   50% {
-    opacity: 0.25;
-  }
-
-  /* line 82, ../sass/screen.scss */
+    opacity: 0.25; }
   100% {
-    opacity: 1;
-  }
-}
-
-/* line 85, ../sass/screen.scss */
+    opacity: 1; } }
 section.scene {
   position: absolute;
   width: 100%;
@@ -247,199 +203,119 @@ section.scene {
   padding: 0px 20px;
   -webkit-transition: all .35s ease-out;
   -moz-transition: all .35s ease-out;
-  transition: all .35s ease-out;
-}
-/* line 93, ../sass/screen.scss */
-section.scene.one {
-  background: #1abc9c;
-  -webkit-transform: translate3d(0, 0, 0);
-  -moz-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
-}
-/* line 98, ../sass/screen.scss */
-section.scene.one.active {
-  -webkit-transform: translate3d(0, 0, 0);
-  -moz-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
-}
-/* line 103, ../sass/screen.scss */
-section.scene.one.after {
-  -webkit-transform: translate3d(0, -100%, 0);
-  -moz-transform: translate3d(0, -100%, 0);
-  transform: translate3d(0, -100%, 0);
-}
-/* line 108, ../sass/screen.scss */
-section.scene.one span.scroll-indicator {
-  font-size: 15px;
-  font-size: 0.9375rem;
-  position: absolute;
-  bottom: 20px;
-  left: 50%;
-  margin: auto;
-  color: white;
-  display: inline-block;
-  font-weight: normal;
-  -webkit-transform: scaleX(2.5) translate3d(-50%, 0, 0);
-  -moz-transform: scaleX(2.5) translate3d(-50%, 0, 0);
-  transform: scaleX(2.5) translate3d(-50%, 0, 0);
-  font-family: Helvetica, Arial, san-serif;
-  -webkit-animation: pulse 1s infinite;
-  -moz-animation: pulse 1s infinite;
-  animation: pulse 1s infinite;
-}
-/* line 126, ../sass/screen.scss */
-section.scene.two {
-  background: #e74c3c;
-  -webkit-transform: translate3d(0, 100%, 0);
-  -moz-transform: translate3d(0, 100%, 0);
-  transform: translate3d(0, 100%, 0);
-}
-/* line 131, ../sass/screen.scss */
-section.scene.two.active {
-  -webkit-transform: translate3d(0, 0, 0);
-  -moz-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
-}
-/* line 136, ../sass/screen.scss */
-section.scene.two.after {
-  -webkit-transform: translate3d(-100%, 0, 0);
-  -moz-transform: translate3d(-100%, 0, 0);
-  transform: translate3d(-100%, 0, 0);
-}
-/* line 141, ../sass/screen.scss */
-section.scene.two iframe {
-  margin-top: 20px;
-}
-/* line 145, ../sass/screen.scss */
-section.scene.three {
-  background: #3498db;
-  -webkit-transform: translate3d(100%, 0, 0);
-  -moz-transform: translate3d(100%, 0, 0);
-  transform: translate3d(100%, 0, 0);
-}
-/* line 150, ../sass/screen.scss */
-section.scene.three.active {
-  -webkit-transform: translate3d(0, 0, 0);
-  -moz-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
-}
-/* line 155, ../sass/screen.scss */
-section.scene.three.after {
-  -webkit-transform: translate3d(0, -100%, 0);
-  -moz-transform: translate3d(0, -100%, 0);
-  transform: translate3d(0, -100%, 0);
-}
-/* line 160, ../sass/screen.scss */
-section.scene.three iframe {
-  margin-top: 20px;
-}
-/* line 164, ../sass/screen.scss */
-section.scene.four {
-  -webkit-transform: translate3d(0, 100%, 0);
-  -moz-transform: translate3d(0, 100%, 0);
-  transform: translate3d(0, 100%, 0);
-}
-/* line 168, ../sass/screen.scss */
-section.scene.four.active {
-  background: #794dc8;
-  -webkit-transform: translate3d(0, 0, 0);
-  -moz-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
-}
-/* line 174, ../sass/screen.scss */
-section.scene.four.after {
-  -webkit-transform: translate3d(0, 0, 0) scale(0);
-  -moz-transform: translate3d(0, 0, 0) scale(0);
-  transform: translate3d(0, 0, 0) scale(0);
-}
-/* line 179, ../sass/screen.scss */
-section.scene.four iframe {
-  margin-top: 20px;
-}
-/* line 183, ../sass/screen.scss */
-section.scene.five {
-  background: #1abc9c;
-  -webkit-transform: scale(0);
-  -moz-transform: scale(0);
-  transform: scale(0);
-  opacity: 0;
-}
-/* line 189, ../sass/screen.scss */
-section.scene.five.active {
-  -webkit-transform: scale(1);
-  -moz-transform: scale(1);
-  transform: scale(1);
-  opacity: 1;
-}
-/* line 195, ../sass/screen.scss */
-section.scene.five.after {
-  -webkit-transform: translate3d(-100%, 0, 0) rotateZ(180deg);
-  -moz-transform: translate3d(-100%, 0, 0) rotateZ(180deg);
-  transform: translate3d(-100%, 0, 0) rotateZ(180deg);
-  opacity: 1;
-}
-/* line 202, ../sass/screen.scss */
-section.scene.six {
-  background: #e74c3c;
-  -webkit-transform: translate3d(100%, 0, 0);
-  -moz-transform: translate3d(100%, 0, 0);
-  transform: translate3d(100%, 0, 0);
-}
-/* line 207, ../sass/screen.scss */
-section.scene.six.active {
-  -webkit-transform: translate3d(0, 0, 0);
-  -moz-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
-}
-/* line 211, ../sass/screen.scss */
-section.scene.six.active .the-end {
-  -webkit-transform: translate3d(-50%, 0, 0) rotateZ(360deg);
-  -moz-transform: translate3d(-50%, 0, 0) rotateZ(360deg);
-  transform: translate3d(-50%, 0, 0) rotateZ(360deg);
-}
-/* line 217, ../sass/screen.scss */
-section.scene.six .the-end {
-  font-size: 24px;
-  font-size: 1.5rem;
-  position: absolute;
-  bottom: 20px;
-  left: 50%;
-  margin: auto;
-  color: white;
-  display: inline-block;
-  font-weight: normal;
-  -webkit-transition: all .35s ease-out;
-  -moz-transition: all .35s ease-out;
-  transition: all .35s ease-out;
-  -webkit-transform: translate3d(-50%, 0, 0) rotateZ(0deg);
-  -moz-transform: translate3d(-50%, 0, 0) rotateZ(0deg);
-  transform: translate3d(-50%, 0, 0) rotateZ(0deg);
-}
-/* line 234, ../sass/screen.scss */
-section.scene div.container {
-  position: relative;
-  text-align: center;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
-}
-/* line 242, ../sass/screen.scss */
-section.scene h1 {
-  text-align: center;
-  -webkit-transition: all .35s ease-out;
-  color: white;
-  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
-}
-/* line 248, ../sass/screen.scss */
-section.scene a {
-  text-decoration: underline;
-  color: white;
-}
+  transition: all .35s ease-out; }
+  section.scene span.scroll-indicator {
+    font-size: 15px;
+    font-size: 0.9375rem;
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    margin: auto;
+    color: white;
+    display: inline-block;
+    font-weight: normal;
+    -webkit-transform: scaleX(2.5) translate3d(-50%, 0, 0);
+    -moz-transform: scaleX(2.5) translate3d(-50%, 0, 0);
+    transform: scaleX(2.5) translate3d(-50%, 0, 0);
+    font-family: Helvetica, Arial, san-serif;
+    -webkit-animation: pulse 1s infinite;
+    -moz-animation: pulse 1s infinite;
+    animation: pulse 1s infinite; }
+    @media (max-width: 767px) and (orientation: landscape) {
+      section.scene span.scroll-indicator {
+        bottom: 5px; } }
+    section.scene span.scroll-indicator.reverse {
+      -webkit-transform: rotateZ(180deg) scaleX(2.5) translate3d(50%, 0, 0);
+      -moz-transform: rotateZ(180deg) scaleX(2.5) translate3d(50%, 0, 0);
+      transform: rotateZ(180deg) scaleX(2.5) translate3d(50%, 0, 0);
+      top: 20px;
+      bottom: auto; }
+      @media (max-width: 767px) and (orientation: landscape) {
+        section.scene span.scroll-indicator.reverse {
+          bottom: 5px; } }
+  section.scene.fix {
+    background: #1abc9c;
+    -webkit-transform: translate3d(0, 0, 0);
+    -moz-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0); }
+  section.scene.up_after.after {
+    -webkit-transform: translate3d(0, -100%, 0);
+    -moz-transform: translate3d(0, -100%, 0);
+    transform: translate3d(0, -100%, 0); }
+  section.scene.up {
+    background: #e74c3c;
+    -webkit-transform: translate3d(0, 100%, 0);
+    -moz-transform: translate3d(0, 100%, 0);
+    transform: translate3d(0, 100%, 0); }
+  section.scene.left_after.after {
+    -webkit-transform: translate3d(-100%, 0, 0);
+    -moz-transform: translate3d(-100%, 0, 0);
+    transform: translate3d(-100%, 0, 0); }
+  section.scene.left {
+    background: #3498db;
+    -webkit-transform: translate3d(100%, 0, 0);
+    -moz-transform: translate3d(100%, 0, 0);
+    transform: translate3d(100%, 0, 0); }
+  section.scene.shrink {
+    -webkit-transform: scale(0);
+    -moz-transform: scale(0);
+    transform: scale(0); }
+  section.scene.shrink_after.after {
+    -webkit-transform: scale(0);
+    -moz-transform: scale(0);
+    transform: scale(0); }
+  section.scene.roll {
+    -webkit-transform: translate3d(100%, 0, 0) rotatez(-180deg);
+    -moz-transform: translate3d(100%, 0, 0) rotatez(-180deg);
+    transform: translate3d(100%, 0, 0) rotatez(-180deg); }
+  section.scene.roll_after.after {
+    -webkit-transform: translate3d(-100%, 0, 0) rotateZ(180deg);
+    -moz-transform: translate3d(-100%, 0, 0) rotateZ(180deg);
+    transform: translate3d(-100%, 0, 0) rotateZ(180deg); }
+  section.scene span.scroll-indicator {
+    font-size: 15px;
+    font-size: 0.9375rem;
+    position: absolute;
+    top: 20px;
+    left: 50%;
+    margin: auto;
+    color: white;
+    display: inline-block;
+    font-weight: normal;
+    -webkit-transform: scaleX(2.5) translate3d(-50%, 0, 0) rotateZ(180deg);
+    -moz-transform: scaleX(2.5) translate3d(-50%, 0, 0) rotateZ(180deg);
+    transform: scaleX(2.5) translate3d(-50%, 0, 0) rotateZ(180deg);
+    font-family: Helvetica, Arial, san-serif;
+    -webkit-animation: pulse 1s infinite;
+    -moz-animation: pulse 1s infinite;
+    animation: pulse 1s infinite; }
+    @media (max-width: 767px) and (orientation: landscape) {
+      section.scene span.scroll-indicator {
+        top: 5px; } }
+  section.scene.active {
+    -webkit-transform: translate3d(0, 0, 0) scale(1);
+    -moz-transform: translate3d(0, 0, 0) scale(1);
+    transform: translate3d(0, 0, 0) scale(1);
+    opacity: 1; }
+  section.scene div.container {
+    position: relative;
+    text-align: center;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%); }
+  section.scene h1 {
+    text-align: center;
+    -webkit-transition: all .35s ease-out;
+    color: white;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3); }
+  section.scene a {
+    text-decoration: underline;
+    color: white; }
 
-/* line 254, ../sass/screen.scss */
 section {
   height: 100%;
   width: 100%;
-  background: #3498db;
-}
+  background: #3498db; }
+
+/*# sourceMappingURL=screen.css.map */
