--- a/example/stylesheets/screen.css
+++ b/example/stylesheets/screen.css
@@ -145,9 +145,6 @@ p {
     font-size: 10px;
     font-size: 0.625rem; }
 
-  iframe {
-    display: none; }
-
   span.scroll-indicator {
     font-size: 10px !important; } }
 html, body {
@@ -170,40 +167,102 @@ main {
 
 @-webkit-keyframes pulse {
   0% {
-    opacity: 1; }
+    opacity: 0.25;
+    padding-top: 10px;
+    padding-bottom: 10px; }
   50% {
-    opacity: 0.25; }
+    opacity: 1;
+    padding-top: 0px;
+    padding-bottom: 0px; }
   100% {
-    opacity: 1; } }
+    opacity: 0.25;
+    padding-top: 10px;
+    padding-bottom: 10px; } }
 @-moz-keyframes pulse {
   0% {
-    opacity: 1; }
+    opacity: 0.25;
+    padding-top: 10px;
+    padding-bottom: 10px; }
   50% {
-    opacity: 0.25; }
+    opacity: 1;
+    padding-top: 0px;
+    padding-bottom: 0px; }
   100% {
-    opacity: 1; } }
+    opacity: 0.25;
+    padding-top: 10px;
+    padding-bottom: 10px; } }
 @-o-keyframes pulse {
   0% {
-    opacity: 1; }
+    opacity: 0.25;
+    padding-top: 10px;
+    padding-bottom: 10px; }
   50% {
-    opacity: 0.25; }
+    opacity: 1;
+    padding-top: 0px;
+    padding-bottom: 0px; }
   100% {
-    opacity: 1; } }
+    opacity: 0.25;
+    padding-top: 10px;
+    padding-bottom: 10px; } }
 @keyframes pulse {
   0% {
-    opacity: 1; }
+    opacity: 0.25;
+    padding-top: 10px;
+    padding-bottom: 10px; }
   50% {
-    opacity: 0.25; }
+    opacity: 1;
+    padding-top: 0px;
+    padding-bottom: 0px; }
   100% {
-    opacity: 1; } }
+    opacity: 0.25;
+    padding-top: 10px;
+    padding-bottom: 10px; } }
+section.scene:nth-child(1) {
+  background-image: url("../res/1.jpg"); }
+
+section.scene:nth-child(2) {
+  background-image: url("../res/2.jpg"); }
+
+section.scene:nth-child(3) {
+  background-image: url("../res/3.jpg"); }
+
+section.scene:nth-child(4) {
+  background-image: url("../res/4.jpg"); }
+
+section.scene:nth-child(5) {
+  background-image: url("../res/5.jpg"); }
+
+section.scene:nth-child(6) {
+  background-image: url("../res/6.jpg"); }
+
+section.scene:nth-child(7) {
+  background-image: url("../res/7.jpg"); }
+
+section.scene:nth-child(8) {
+  background-image: url("../res/8.jpg"); }
+
+section.scene:nth-child(9) {
+  background-image: url("../res/9.jpg"); }
+
 section.scene {
   position: absolute;
+  margin: 0 auto;
+  left: 0;
+  right: 0;
   width: 100%;
   height: 100%;
   padding: 0px 20px;
-  -webkit-transition: all .35s ease-out;
-  -moz-transition: all .35s ease-out;
-  transition: all .35s ease-out; }
+  background-size: 100% 100%;
+  background-image: url("../res/1.jpg");
+  -webkit-transition: all 0.35s ease-out;
+  -moz-transition: all 0.35s ease-out;
+  transition: all 0.35s ease-out; }
+  @media (min-width: 1024px) {
+    section.scene {
+      width: 63.54vh; } }
+  @media (min-width: 768px) and (max-width: 1023px) {
+    section.scene {
+      width: 63.54vh; } }
   section.scene span.scroll-indicator {
     font-size: 15px;
     font-size: 0.9375rem;
@@ -211,30 +270,29 @@ section.scene {
     bottom: 20px;
     left: 50%;
     margin: auto;
-    color: white;
+    color: #bbb;
     display: inline-block;
     font-weight: normal;
-    -webkit-transform: scaleX(2.5) translate3d(-50%, 0, 0);
-    -moz-transform: scaleX(2.5) translate3d(-50%, 0, 0);
-    transform: scaleX(2.5) translate3d(-50%, 0, 0);
+    -webkit-transform: rotateZ(180deg) scaleX(2.5) translate3d(50%, 0, 0);
+    -moz-transform: rotateZ(180deg) scaleX(2.5) translate3d(50%, 0, 0);
+    transform: rotateZ(180deg) scaleX(2.5) translate3d(50%, 0, 0);
     font-family: Helvetica, Arial, san-serif;
-    -webkit-animation: pulse 1s infinite;
-    -moz-animation: pulse 1s infinite;
-    animation: pulse 1s infinite; }
+    -webkit-animation: pulse 1.5s infinite;
+    -moz-animation: pulse 1.5s infinite;
+    animation: pulse 1.5s infinite; }
     @media (max-width: 767px) and (orientation: landscape) {
       section.scene span.scroll-indicator {
         bottom: 5px; } }
     section.scene span.scroll-indicator.reverse {
-      -webkit-transform: rotateZ(180deg) scaleX(2.5) translate3d(50%, 0, 0);
-      -moz-transform: rotateZ(180deg) scaleX(2.5) translate3d(50%, 0, 0);
-      transform: rotateZ(180deg) scaleX(2.5) translate3d(50%, 0, 0);
+      -webkit-transform: scaleX(2.5) translate3d(-50%, 0, 0);
+      -moz-transform: scaleX(2.5) translate3d(-50%, 0, 0);
+      transform: scaleX(2.5) translate3d(-50%, 0, 0);
       top: 20px;
       bottom: auto; }
       @media (max-width: 767px) and (orientation: landscape) {
         section.scene span.scroll-indicator.reverse {
           bottom: 5px; } }
   section.scene.fix {
-    background: #1abc9c;
     -webkit-transform: translate3d(0, 0, 0);
     -moz-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0); }
@@ -243,7 +301,6 @@ section.scene {
     -moz-transform: translate3d(0, -100%, 0);
     transform: translate3d(0, -100%, 0); }
   section.scene.up {
-    background: #e74c3c;
     -webkit-transform: translate3d(0, 100%, 0);
     -moz-transform: translate3d(0, 100%, 0);
     transform: translate3d(0, 100%, 0); }
@@ -252,7 +309,6 @@ section.scene {
     -moz-transform: translate3d(-100%, 0, 0);
     transform: translate3d(-100%, 0, 0); }
   section.scene.left {
-    background: #3498db;
     -webkit-transform: translate3d(100%, 0, 0);
     -moz-transform: translate3d(100%, 0, 0);
     transform: translate3d(100%, 0, 0); }
@@ -272,26 +328,6 @@ section.scene {
     -webkit-transform: translate3d(-100%, 0, 0) rotateZ(180deg);
     -moz-transform: translate3d(-100%, 0, 0) rotateZ(180deg);
     transform: translate3d(-100%, 0, 0) rotateZ(180deg); }
-  section.scene span.scroll-indicator {
-    font-size: 15px;
-    font-size: 0.9375rem;
-    position: absolute;
-    top: 20px;
-    left: 50%;
-    margin: auto;
-    color: white;
-    display: inline-block;
-    font-weight: normal;
-    -webkit-transform: scaleX(2.5) translate3d(-50%, 0, 0) rotateZ(180deg);
-    -moz-transform: scaleX(2.5) translate3d(-50%, 0, 0) rotateZ(180deg);
-    transform: scaleX(2.5) translate3d(-50%, 0, 0) rotateZ(180deg);
-    font-family: Helvetica, Arial, san-serif;
-    -webkit-animation: pulse 1s infinite;
-    -moz-animation: pulse 1s infinite;
-    animation: pulse 1s infinite; }
-    @media (max-width: 767px) and (orientation: landscape) {
-      section.scene span.scroll-indicator {
-        top: 5px; } }
   section.scene.active {
     -webkit-transform: translate3d(0, 0, 0) scale(1);
     -moz-transform: translate3d(0, 0, 0) scale(1);
@@ -302,11 +338,10 @@ section.scene {
     text-align: center;
     top: 50%;
     -webkit-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
     transform: translateY(-50%); }
   section.scene h1 {
     text-align: center;
-    -webkit-transition: all .35s ease-out;
     color: white;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3); }
   section.scene a {
